# qa_guru_lesson_20

./: .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt
schemas/: get_user_list.json  post_create_user.json
tests_api/: helper.py  test_req.py
